// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client-side rendering 1`] = `
"<title data-react-helmet=\\"true\\"></title>

<meta name=\\"theme-color\\" content=\\"#FFFFFF\\">

<link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-1-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-2-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-3-1511941200000.css\\" rel=\\"stylesheet\\">

<meta charset=\\"utf-8\\">
<meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\">"
`;

exports[`Client-side rendering 2`] = `
"<div id=\\"react-view\\">
  <h1>testValue</h1>
  <div data-chunk-name=\\"sample-component-1\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-2\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-3\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
</div>
<script id=\\"inj\\" type=\\"application/javascript\\" nonce=\\"abcdef-dummy-nonce\\">
  window.INJ = \\"MDEyMzQ1Njc4OTAxMjM0NTY3ODkwMTIzNDU2Nzg5MDEMKtsRsLh8R6HHpitZ/eghsfwaFoaus6qLoke9MlgqF39wUyiJOuxKmqjECLiFel3AfVxBlTkA2sj6FNYLq9mBb1VDFWdXsViFyeX13tuynQ88EETx6RuQyms6aHDjsZzm54u6pdtE5bElWjYQQYYKWQ6Q7AG6jOJ0m4jyHJEL2hbRtKnBKIGH+RZ8NtSPyZUdQIHOOyAmEjNWwTcoflKwqX1yZQFqY61t71j0sQev32jJQxdFCAfnIPEBbQyoMOthnONT2MDoAhYBo7mW5WvIIwKZOdbtEV00hm8UfXRtHfiDZlOuY93yXGAlvaXY18BqM3DPSi818K7Z1H4SWC1VYTGrNkXoMDIE6ybStZpZjR4spwNSQv32yICqmIFSe5L6VP07D+zuaRT8l8Kisyjw5b2Xh3ZZWsXzZjicu32lyebon9uckaiJy3Jj8fVO83oGnoVoG23K8ksWQe5vTPxUvDNJMayc7CzFtcUZFtdicQT0RPhKYtcvngtzc19MY6rKHS5iMFX5Ms6j+LMWfYk3Np31TfQ3q5XhqvVHZPciRN1TTzEdcfcEJ+d8oQ+6GKM=\\"
</script>
<script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/sample-component-2-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/sample-component-3-1511941200000.js\\" type=\\"application/javascript\\"></script>"
`;

exports[`Client-side rendering 3`] = `
"<title data-react-helmet=\\"true\\"></title>

<meta name=\\"theme-color\\" content=\\"#FFFFFF\\">

<link href=\\"/test/public/path/main-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-1-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-2-1511941200000.css\\" rel=\\"stylesheet\\">
<link href=\\"/test/public/path/sample-component-3-1511941200000.css\\" rel=\\"stylesheet\\">

<meta charset=\\"utf-8\\">
<meta content=\\"width=device-width,initial-scale=1.0\\" name=\\"viewport\\">"
`;

exports[`Client-side rendering 4`] = `
"<div id=\\"react-view\\">
  <h1>testValue</h1>
  <div data-chunk-name=\\"sample-component-1\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-2\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
  <div data-chunk-name=\\"sample-component-3\\">
    <div>
      <h1>Sample Component</h1><pre>{
  \\"test\\": {
    \\"key\\": \\"testValue\\"
  },
  \\"dr_pogodin_react_utils___split_components\\": {
    \\"sample-component-1\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    },
    \\"sample-component-2\\": {
      \\"data\\": {},
      \\"numRefs\\": 0,
      \\"operationId\\": \\"\\",
      \\"timestamp\\": 1574985600000
    }
  }
}</pre>
    </div>
  </div>
</div>

<script src=\\"/test/public/path/main-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/sample-component-2-1511941200000.js\\" type=\\"application/javascript\\"></script>
<script src=\\"/test/public/path/sample-component-3-1511941200000.js\\" type=\\"application/javascript\\"></script>"
`;
